Bug 466678 - Missing icon sizes are replaced with different higher-res versions at 100% and 200% screen scale
Summary: Missing icon sizes are replaced with different higher-res versions at 100% an...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kiconthemes
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.103.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-01 20:43 UTC by Alexander Wilms
Modified: 2026-01-12 21:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.23
Sentry Crash Report:


Attachments
Cuttlefish screenshot of system-switch-user icon at 100% scale on Wayland (18.82 KB, image/png)
2023-03-01 20:44 UTC, Alexander Wilms
Details
Cuttlefish screenshot of system-switch-user icon at 200% scale on Wayland (17.84 KB, image/png)
2023-03-01 20:44 UTC, Alexander Wilms
Details
Cuttlefish screenshot of system-switch-user icon at 100% scale on X11 (18.82 KB, image/png)
2023-03-01 20:45 UTC, Alexander Wilms
Details
Cuttlefish screenshot of system-switch-user icon at 200% scale on X11 (17.84 KB, image/png)
2023-03-01 20:45 UTC, Alexander Wilms
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Wilms 2023-03-01 20:43:17 UTC
SUMMARY
The Breeze icon theme does not contain a 16 px version of the system-switch-user icon. Therefore, a higher-resolution icon is scaled down and used when a 16 px version of this icon is requested. The resolution of the original icon that's used as a placeholder differs depending on the used graphics platform. At 100% scale, the 22 px icon is scaled to 16 px and at 200% scale, the 32 px icon is scaled to 16 px.

This issue was discovered while investigating https://bugs.kde.org/show_bug.cgi?id=466630

STEPS TO REPRODUCE
1. Set screen scale to 100% under "System settings > Display and Monitor > Display Configuration > Scale"
2. Open the icon viewer cuttlefish
3. Search system-switch-user icon
4. Set screen scale to 200%
5. Log out and back in
5. Open the icon viewer cuttlefish
6. Search system-switch-user icon

OBSERVED RESULT
The 16 px versions of the icon differ based on the screen scale used.

EXPECTED RESULT
The icons always look identical at a particular size

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230228
KDE Plasma Version: 5.27.1
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.12-1-default (64-bit)
Graphics Platform: Wayland


ADDITIONAL INFORMATION
Comment 1 Alexander Wilms 2023-03-01 20:44:45 UTC
Created attachment 156895 [details]
Cuttlefish screenshot of system-switch-user icon at 100% scale on Wayland
Comment 2 Alexander Wilms 2023-03-01 20:44:58 UTC
Created attachment 156896 [details]
Cuttlefish screenshot of system-switch-user icon at 200% scale on Wayland
Comment 3 Alexander Wilms 2023-03-01 20:45:15 UTC
Created attachment 156897 [details]
Cuttlefish screenshot of system-switch-user icon at 100% scale on X11
Comment 4 Alexander Wilms 2023-03-01 20:45:27 UTC
Created attachment 156898 [details]
Cuttlefish screenshot of system-switch-user icon at 200% scale on X11
Comment 5 Nate Graham 2023-03-02 20:10:49 UTC
Can reproduce. It's weird.
Comment 6 Alexander Wilms 2023-03-02 20:15:52 UTC
This part of the original report is wrong:

"The resolution of the original icon that's used as a placeholder differs depending on the used graphics platform."

The placeholder depends on the screen scale, not the graphics platform.
Comment 7 Bug Janitor Service 2026-01-09 23:19:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/205
Comment 8 Méven 2026-01-12 15:59:28 UTC
Git commit 39276b524880d1d3ab7d9fb2dcbd46a8abc8cd4c by Méven Car, on behalf of Alexander Wilms.
Committed on 12/01/2026 at 13:36.
Pushed by ngraham into branch 'master'.

Fix inconsistent icon selection at different scale factors

M  +3    -2    src/kicontheme.cpp

https://invent.kde.org/frameworks/kiconthemes/-/commit/39276b524880d1d3ab7d9fb2dcbd46a8abc8cd4c