Fix inconsistent icon selection at different scale factors

BUG:466678